syntax = "proto3";

option csharp_namespace = "grpcServer.Protos";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

package grpcPush;

service PushNotification {
   rpc Subscribe (TopicRequest) returns (stream TickerUpdateResponse);

   rpc GetAll (google.protobuf.Empty) returns (GetAllResponse);
   rpc Add (Case) returns (google.protobuf.Empty);
   rpc Remove(CaseIdRequest) returns(google.protobuf.Empty);
}

message TopicRequest{
    string topic = 1;
    google.protobuf.Timestamp time = 2;
}


message TickerUpdateResponse {
  Case case = 1;  
  CaseAction caseAction = 2;
}

enum CaseAction{
      None = 0;
      Add = 1;
      Remove = 2;
  }

message Case{
    string id = 1;
    string Name = 2;
    int32 value = 3;
    google.protobuf.Timestamp time = 4;
}

message GetAllResponse{
    repeated Case cases = 1;
}

message CaseIdRequest{
    string id = 1;
}